# algo

./: CMakeLists.txt  README.md
01_algorithm/include/: arithmetic.h  bisection.h  list.h  sorting.h  stack.h  tree.h  tree_variant.h
01_algorithm/src/: 00_arithmetics.cpp  03_stack.cpp  04_list.cpp  05_tree.cpp  06_tree_variant.cpp
01_algorithm/test/: test_arithmetic.cpp  test_bisection.cpp  test_list.cpp  test_sorting.cpp  test_stack.cpp  test_tree.cpp  test_tree_variant.cpp
02_dynprog_vec/include/: sorting_problem.h  stack_problem.h  string_problem.h  subseq.h  subseq_sum.h  two_point_diff.h  two_point_sum.h  utility.h
02_dynprog_vec/src/: 02_two_point_diff.cpp  03_subseq_sum.cpp  04_string_and_stack.cpp  05_other.cpp
02_dynprog_vec/src_2024/: 01_two_point_sum.cpp  02_two_point_diff.cpp  03_subseq_sum.cpp  04_string_and_stack.cpp  05_other.cpp
02_dynprog_vec/test/: test_sorting_problem.cpp  test_stack_problem.cpp  test_string_problem.cpp  test_subseq.cpp  test_subseq_sum.cpp  test_two_point_diff.cpp  test_two_point_sum.cpp
03_dynprog/include/: dp_matrix_and_graph.h  dp_matrix_only.h  state_time_problem.h
03_dynprog/src/: 20_single_link_subproblem.cpp  21_multi_link_subproblem.cpp  22_time_state_diagram.cpp
03_dynprog/test/: test_dp_matrix_and_graph.cpp  test_dp_matrix_only.cpp  test_state_time_problem.cpp
04_fundalmental/include/: matrix.h  rvalue.h  timer.h  utility.h
04_fundalmental/test/: test_custom_allocator.cpp  test_custom_deleter.cpp  test_custom_new_operator.cpp  test_custom_placement_new.cpp  test_file.cpp  test_mem_allocator.cpp  test_polymorphism.cpp  test_rvalue.cpp  test_timer.cpp
05_template/include/: array.h  function.h  idx_seq.h  mem.h  meta.h  metaprog.h  shared_ptr.h  template.h  traits.h  tuple.h  tuple2.h  type_erasure.h  unique_ptr.h  variadic.h  variant.h
05_template/src/: template_index_sequence.cpp  template_meta.cpp  template_tuple.cpp
05_template/test/: test_array.cpp  test_function.cpp  test_idx_seq.cpp  test_metaprog.cpp  test_optional_ref.cpp  test_shared_ptr.cpp  test_specialization.cpp  test_template.cpp  test_template_specialization.cpp  test_traits.cpp  test_tuple.cpp  test_tuple_idx_seq.cpp  test_type_erasure.cpp  test_type_erasure_example.cpp  test_unique_ptr.cpp  test_variadic.cpp  test_variant.cpp  test_variant_overloading_lambda.cpp  test_variant_vs_tuple.cpp
06_threading/include/: latency_test.h  locked_queue.h  lockfree_queue.h  promise_future.h  singleton.h  spinlock.h  statistics.h  synchronization.h  thread.h
06_threading/test/: test_jthread.cpp  test_lockfree_queue.cpp  test_promise_future.cpp  test_semaphore.cpp  test_spinlock_mutex.cpp  test_synchronization.cpp  test_thread.cpp  test_thread_create.cpp  test_thread_j.cpp  test_thread_p.cpp  test_thread_stop.cpp  test_thread_timing.cpp
10_interview/test/: alphagrep.cpp  archax.cpp  citadel1.cpp  epoch.cpp
alg/01_algorithm/include/: bisection.h  sorting.h  stack.h
alg/01_algorithm/test/: test_list.cpp  test_sorting.cpp  test_stack.cpp  test_tree.cpp  test_tree_variant.cpp
alg/02_dynprog_vec/include/: two_point_diff.h  two_point_sum.h
alg/02_dynprog_vec/test/: test_sorting_problem.cpp  test_stack_problem.cpp
alg/03_dynprog/include/: dp_matrix_only.h
alg/04_fundalmental/include/: matrix.h  rvalue.h  socket.h  statistics.h  std_alg.h  timer.h  utility.h
alg/04_fundalmental/test/: test_cast.cpp  test_constexpr.cpp  test_constexpr_map.cpp  test_exception.cpp  test_global_static.cpp  test_memory_allocator.cpp  test_memory_deleter.cpp  test_memory_new_operator.cpp  test_memory_placement_new.cpp  test_memory_shared_ptr.cpp  test_memory_unique.cpp  test_optional.cpp  test_polymorphism.cpp  test_rvalue.cpp  test_std_alg.cpp  test_std_container.cpp  test_std_layout.cpp  test_timer.cpp
alg/05_template/include/: array.h  function.h  metaprog.h  optional_ref.h  shared_ptr.h  template.h  traits.h  tuple.h  tuple_idx_seq.h
alg/05_template/test/: test_array.cpp  test_function.cpp  test_metaprog.cpp  test_optional_ref.cpp  test_template.cpp  test_template_specialization.cpp  test_traits.cpp  test_tuple.cpp  test_type_erasure_example.cpp  test_unique_ptr.cpp  test_variant_basic.cpp  test_variant_overloading_lambda.cpp  test_variant_visit.cpp
alg/06_threading/include0/: shared_mutex.h  singleton.h  spinlock.h  synchronization.h  thread.h
alg/06_threading/include1/: jthreadpool_cv2.h  locked_queue.h  lockfree_hashmap.h  lockfree_queue.h  lockfree_queue_test.h  run_mpmcq.h  run_threadpool.h  threadpool.h  threadpool_j.h  threadpool_jcrt.h  threadpool_sync.h
alg/06_threading/test/: test_concurrency.cpp  test_promise_future.cpp  test_semaphore.cpp  test_shared_mutex.cpp  test_singleton.cpp  test_spinlock_mutex.cpp  test_thread_timing.cpp
alg/06_threading/test0/: test_synchronization.cpp  test_thread_create.cpp  test_thread_stop_source.cpp
alg/06_threading/test1/: test_concurrency.cpp  test_lockfree_hashmap.cpp  test_lockfree_queue.cpp  test_threadpool.cpp  test_threadpool.cpp.temp
alg/06_threading/test_not_merged/: test_lockfree_hashmap.cpp  test_threadpool_cv.cpp
alg/07_cpp20/include/: concepts.h  range.h
alg/07_cpp20/test/: concepts.cpp  test_concepts_apply.cpp  test_concepts_define.cpp  test_range.cpp  test_spaceship.cpp
alg/temp/: gcc options.txt  noexcept.txt  string.txt  template constructor.txt  template variable.txt
all_tests/include/: 02_dynprog.h  interview.h  shared_ptr_with_deleter.h
all_tests/src/: test.cpp
data/: test.xml  test_out.xml
include/: matrix.h  template_specialization_in_header.h
src/: STL_constraint1.cpp  cstr.cpp  fileio.cpp  hashmap.cpp  macro0.cpp  macro1.cpp  pod.cpp  signal.cpp  simd.cpp  template.cpp  test.cpp  time (please add to project).txt  tree_traverse.cpp  variant1.cpp
src_dal/: template_specialization_in_header.cpp  xml.cpp
src_hacker/: hacker2_citadel2.cpp
src_ylib/: cat.cpp  cpoly.cpp  message_handler.cpp  psql_join.cpp  psql_test.cpp  psql_tuple.cpp  yaml0.cpp  yaml1.cpp
src_yxx/: cat.cpp  event_handler.cpp  message_handler.cpp  psql_API.h  psql_basic.cpp  reckless.cpp
(+7 files in other folders)
